--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV = 'production'
-PUBLIC_PATH = './'
-BASE_URL='https://easy-mock.com/'
+BASE_URL = './'
+VUE_APP_BASE_API = 'https://easy-mock.com/'
