--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV = 'development'
 BASE_URL = '/'
-VUE_APP_BASE_API = ''
+VUE_APP_BASE_API = '/easyapi'
+VUE_APP_BASE_BASE2_API = '/githubapi'
