--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NODE_ENV = 'production'
 BASE_URL = './'
-VUE_APP_BASE_API = 'https://easy-mock.com/'
+VUE_APP_BASE_API = 'https://www.fastmock.site'
+VUE_APP_BASE_BASE2_API = 'https://getman.cn'
