--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --mode dev",
+    "dev": "vue-cli-service serve --mode dev",
+    "build": "vue-cli-service build --mode prod",
+    "build_test": "vue-cli-service build --mode test",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -12,6 +14,7 @@
     "core-js": "^3.6.4",
     "mint-ui": "^2.2.13",
     "normalize.css": "^8.0.1",
+    "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
@@ -30,7 +33,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.13.1",
-    "postcss-px2rem": "^0.3.0",
+    "postcss-aspect-ratio-mini": "^1.1.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "qs": "^6.9.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11",
